--- a/index.html
+++ b/index.html
@@ -15,12 +15,38 @@
 
 <body background="assets/images/crstyals background.jpg">
 
-<div>
-    <button class="gemButton" id="gemButton1"><img src="assets/images/blue gem.png" class="gemImage"></button>
-    <button class="gemButton" id="gemButton2"><img src="assets/images/green gem.png" class="gemImage"></button>
-    <button class="gemButton" id="gemButton3"><img src="assets/images/orange gem.png" class="gemImage"></button>
-    <button class="gemButton" id="gemButton4"><img src="assets/images/yellow gem.png" class="gemImage"></button>
-</div>
+    <header>
+        <h1>Crystals Collector!</h1>
+    </header>
+
+    <div id="instructions">
+        <p>You will be given a random number at the start of the game.</p>
+        <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your
+            total score.</p>
+        <p>You win the game by matching your total score to a random number, you lose the game if your total score goes
+            above the random number.</p>
+        <p>The value of each crystal is hidden from you until you click on it.</p>
+        <p>Each time when the game starts, the game will change the values of each crsytal.</p>
+    </div>
+
+    <div id="goalsParent">
+        <div id="goal">
+            
+        </div>
+        <div id="winLoss">
+            <p id="wins">Wins: </p>
+            <p id="losses">Losses: </p>
+        </div>
+    </div>
+    <div>
+        <button class="gemButton" id="gemButton1"><img src="assets/images/blue gem.png" class="gemImage"></button>
+        <button class="gemButton" id="gemButton2"><img src="assets/images/green gem.png" class="gemImage"></button>
+        <button class="gemButton" id="gemButton3"><img src="assets/images/orange gem.png" class="gemImage"></button>
+        <button class="gemButton" id="gemButton4"><img src="assets/images/yellow gem.png" class="gemImage"></button>
+    </div>
+
+    <div id="score"><p>Your total score is:</p></div>
+    <div id="actualScore"></div>
 
 
 
